--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
+    "redux-mock-store": "^1.5.1"
   }
 }
