--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.0",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.12"
   }
 }
